// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component with custom class matches snapshot 1`] = `
<div
  className="Alert custom_class"
/>
`;

exports[`Alert component with no props matches snapshot 1`] = `
<div
  className="Alert"
/>
`;
